--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src/**/* --ext .tsx,.ts --fix",
-    "test": "vitest --run --passWithNoTests=false",
+    "test": "vitest --run --passWithNoTests=true",
     "test:watch": "vitest",
     "test:watch:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
