--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["@testing-library/jest-dom"],
+    "types": [
+      "vitest/globals"
+    ],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
