--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
